# commandtolidil

./: .HpmudBackend.cpp.swp  .README.md.swp  .TestBackend.hpp.swp  .gitignore  Backend.cpp  Backend.h  Backend.hpp  CUPS_Utilities.cpp  CUPS_Utilities.hpp  DeskJet3600.cpp  DeskJet3600.h  DeskJet3600.hpp  File_Header.txt  HpmudBackend.cpp  HpmudBackend.h  HpmudBackend.hpp  LidilCommand.cpp  LidilCommand.hpp  Pen.cpp  Pen.h  Pen.hpp  README.md  Test.cpp  TestBackend.cpp  TestBackend.h  TestBackend.hpp  USBBackend.cpp  USBBackend.h  USBBackend.hpp  commandtolidil.cpp  dj3600command.cpp  dj3600command.ppd.addendum  hp-deskjet_3600_altered.ppd  hp-deskjet_f4100.djtocommand.patch  hp-deskjet_f4100.ppd.patch  hp-deskjet_f4100_series.ppd  hp_f4100.ppd.addendum  meson.build  meson_options.txt
Attributed_Sources/: Backend.h  DeskJet3600.cpp  DeskJet3600.h  HpmudBackend.cpp  HpmudBackend.h  Pen.cpp  Pen.h  Test.cpp  USBBackend.cpp  USBBackend.h  dj3600command.cpp
ppd_work/: hp-deskjet_f4100.djtocommand.patch  hp-deskjet_f4100.ppd.patch  hp-deskjet_f4100_series.ppd
