# Meson options for commandtolidil
# This is free software; you can redistribute it and/or modify it under the terms
# of the GNU General Public License as published by the Free Software Foundation,
# either version 3 of the License, or (at your option) any other version.
#
# This is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
# PARTICULAR PURPOSE. See the GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License along with
# commandtolidil. If not, see <https://www.gnu.org/licenses/>.

option( 'hpbackend',
        type: 'feature',
        value: 'disabled',
        description: 'Build support for HP\'s CUPS backend' )

option( 'hplipconfigfile',
        type: 'string',
        value: '/etc/hp/hplip.conf',
        description: 'Path to HPLIP\'s configuration file' )
